@@ -1089,6 +1089,57 @@ int gridReconstructSplitEdgeRatio(Grid *grid, Queue *queue,
   return newnode;
 }
 
+Grid *gridAdaptVolumeEdges(Grid *grid )
+{
+  int ranking, conn, nodes[2];
+  int report, nnodeAdd;
+  double length, ratio;
+  int newnode;
+  Plan *plan;
+
+  gridCreateConn(grid);
+  plan = planCreate( gridNConn(grid)/2, MAX(gridNConn(grid)/10,1000) );
+  for(conn=0;conn<gridNConn(grid);conn++) {
+    gridConn2Node(grid,conn,nodes);
+    if ( gridThisEdgeCanBeModifiedInThisPhase(grid,nodes[0],nodes[1]) ) {
+      length = gridEdgeRatio(grid,nodes[0],nodes[1]);
+      if ( length > 1.0 ) planAddItemWithPriority( plan, conn, length );
+    }
+  }
+  planDeriveRankingsFromPriorities( plan );
+  
+  nnodeAdd = 0;
+
+  report = 10; if (planSize(plan) > 100) report = planSize(plan)/10;
+
+  for ( ranking=planSize(plan)-1; ranking>=0; ranking-- ) { 
+    conn = planItemWithThisRanking(plan,ranking);
+    if (ranking/report*report == ranking || ranking==planSize(plan)-1) {
+      printf("adapt ranking%9d nnode%9d added%9d length%6.2f\n",
+	     ranking,gridNNode(grid),nnodeAdd,
+	     planPriorityWithThisRanking(plan,ranking));
+    }
+    if (grid == gridConn2Node(grid,conn,nodes)){
+      if ( gridCellEdge(grid, nodes[0], nodes[1]) &&
+	   gridValidNode(grid, nodes[0]) && 
+	   gridValidNode(grid, nodes[1]) && 
+	   !gridNodeFrozen(grid, nodes[0]) &&
+	   !gridNodeFrozen(grid, nodes[1]) ) {
+	ratio = 0.5;
+	newnode = gridSplitEdgeRatio( grid, NULL,
+				      nodes[0], nodes[1], ratio );
+	if ( newnode != EMPTY ){
+	  nnodeAdd++;
+	} 
+      }
+    }
+  }
+  planFree(plan);
+  gridEraseConn(grid);
+
+  return grid;
+}
+
 int gridSplitEdge(Grid *grid, int n0, int n1)
 {
   return gridSplitEdgeRatio(grid, NULL, n0, n1, 0.5 );
