@@ -25,6 +25,7 @@ Grid *gridAdaptLongShortCurved(Grid *g, double minLength, double maxLength,
 			       GridBool debug_split );
 Grid *gridAdaptLongShortLinear(Grid *g, double minLength, double maxLength,
 			       GridBool debug_split );
+Grid *gridAdaptVolumeEdges(Grid *g);
 
 int gridSplitEdge(Grid *g, int n0, int n1 );
 int gridReconstructSplitEdgeRatio(Grid *g, Queue *q,
