@@ -1,3 +1,9 @@
+2006-01-11 08:35 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridinsert.c (gridAdaptVolumeEdges) only split long volume edges.
+	* src/unit_main.c (main) --phase -3: call gridAdaptVolumeEdges to 
+	complete test case.
+
 2006-01-10 16:16 Mike Park  <mike.park@nasa.gov>
 
 	* src/unit_main.c (main) --phase -3: added but not happy yet.
